--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@ config2
 config/gcp_key.json
 config/firestore-key.json
 app/main2.py
-*/__pycache__/
+**/__pycache__/
 *.pyc
 app/routes/__pycache__/
+app\config\__pycache__
+app/config/__pycache__
 app/schemas/__pycache__/
 app/services/__pycache__/
 temp_images/
